--- a/showcase.html
+++ b/showcase.html
@@ -52,48 +52,48 @@
             <img draggable="false" src="IMGP3019.webp" alt="Image 1" width="100%">
         </div>
         <div class="image">
-            <img src="IMGP3022.webp" alt="Image 2" width="100%">
+            <img draggable="false" src="IMGP3022.webp" alt="Image 2" width="100%">
         </div>
         <div class="image">
-            <img src="IMGP3028.webp" alt="Image 3" width="100%">
+            <img draggable="false" src="IMGP3028.webp" alt="Image 3" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4529.webp" alt="Image 4" width="100%">
+            <img draggable="false" src="IMG_4529.webp" alt="Image 4" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4530.webp" alt="Image 5" width="100%">
+            <img draggable="false" src="IMG_4530.webp" alt="Image 5" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4533.webp" alt="Image 6" width="100%">
+            <img draggable="false" src="IMG_4533.webp" alt="Image 6" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4563.webp" alt="Image 7" width="100%">
+            <img draggable="false" src="IMG_4563.webp" alt="Image 7" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4553.webp" alt="Image 8" width="100%">
+            <img draggable="false" src="IMG_4553.webp" alt="Image 8" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4554.webp" alt="Image 9" width="100%">
+            <img draggable="false" src="IMG_4554.webp" alt="Image 9" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4539.webp" alt="Image 10" width="100%">
+            <img draggable="false" src="IMG_4539.webp" alt="Image 10" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4551.webp" alt="Image 11" width="100%">
+            <img draggable="false" src="IMG_4551.webp" alt="Image 11" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4555.webp" alt="Image 12" width="100%">
+            <img draggable="false" src="IMG_4555.webp" alt="Image 12" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4560.webp" alt="Image 13" width="100%">
+            <img draggable="false" src="IMG_4560.webp" alt="Image 13" width="100%">
         </div>
         <div class="image">
-            <img src="PXL_20240408_224341106.RAW-02.ORIGINAL.webp" alt="Image 14" width="100%">
+            <img draggable="false" src="PXL_20240408_224341106.RAW-02.ORIGINAL.webp" alt="Image 14" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4561.webp" alt="Image 15" width="100%">
+            <img draggable="false" src="IMG_4561.webp" alt="Image 15" width="100%">
         </div>
-        <div id="back-to-index">
+        <div id="back-to-home">
             <a href="JadeKuehnel.html"><button>Home</button></a>
         </div>
     </div>
