--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jade Kuehnel</title>
     <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/png" href="Favicon.png">
+        <link rel="icon" type="image/png" href="imgs/Favicon.png">
     <style>
         body {
             background-color: #010101;
