--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jade Kuehnel</title>
     <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/png" href="imgs/Favicon.png">
+        <link rel="icon" type="image/png" href="Images/Favicon.png">
     <style>
         body {
             background-color: #010101;
@@ -62,7 +62,7 @@
         <p>Hello, welcome to my site, it is still a work in progress.</p>
     </main>
                 <a href="https://www.instagram.com/jadedoesphotography08/" target="_blank">
-                <img src="imgs/Insta.webp" alt="Instagram" width="50" height="50">
+                <img src="Images/Insta.webp" alt="Instagram" width="50" height="50">
             </a>
 </body>
 
