--- a/Software.html
+++ b/Software.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Software</title>
-    <link rel="icon" type="image/png" href="Favicon.png">
+    <link rel="icon" type="image/png" href="Images/Favicon.png">
     
     <style>
         body{
@@ -32,7 +32,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
 <meta property="og:description" content="Hello this is my website for my projects" />
-<meta property="og:image" content="Favicon.png" />
+<meta property="og:image" content="Images/Favicon.png" />
 <meta name="theme-color" content="#010101"
 </head>
 
@@ -44,13 +44,13 @@
         <div class="software">
             <br>
             <br>
-            <img src="Lr.webp" alt="Lr" width="50" height="50">
+            <img src="Images/Lr.webp" alt="Lr" width="50" height="50">
             <h2>Lightroom mobile</h2>
             <p>I use Adobe Lightroom on my Google Pixel 6a.</p>
         </div>
         <br>
         <div class="software">
-            <img src="Ps.webp" alt="Ps" width="50"  >
+            <img src="Images/Ps.webp" alt="Ps" width="50"  >
             <h2>Adobe Photoshop 2024</h2>
             <p>I use Adobe Photoshop on my computer.</p>
         </div>
