--- a/computer.html
+++ b/computer.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Computer Specs</title>
-    <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.png">
+    <link rel="icon" type="image/png" href="Images/Favicon.png">
     
     <style>
         body{
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
     <meta property="og:description" content="Hello this is my website for my projects" />
-    <meta property="og:image" content="Favicon.png" />
+    <meta property="og:image" content="Images/Favicon.png" />
     <meta name="theme-color" content="#010101">
 </head>
 
