--- a/equipment.html
+++ b/equipment.html
@@ -1,6 +1,6 @@
 <head>
     <title>My Equipment</title>
-    <link rel="icon" type="image/png" href="Favicon.png">
+    <link rel="icon" type="image/png" href="Images/Favicon.png">
     <style>
         body{
             background-color:#010101;
@@ -55,7 +55,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
     <meta property="og:description" content="Hello this is my website for my projects" />
-    <meta property="og:image" content="Favicon.png" />
+    <meta property="og:image" content="Images/Favicon.png" />
     <meta name="theme-color" content="#010101">
 </head>
 <body>
@@ -72,25 +72,25 @@
             <td>Pentax</td>
             <td>Pentax K10D</td>
             <td>Pentax-FA 100-300mm and Pentax-DA 16-45mm</td>
-            <td><img src="PentaxK10D.webp" height="70px"></td>
+            <td><img src="Images/PentaxK10D.webp" height="70px"></td>
         </tr>
         <tr>
             <td>Canon</td>
             <td>Canon Rebel XSi</td>
             <td>EF 75-300mm and EF-S 18-55mm</td>
-            <td><img src="CanonEOS.webp" height="70px"></td>
+            <td><img src="Images/CanonEOS.webp" height="70px"></td>
         </tr>
         <tr>
             <td>Google</td>
             <td>Google Pixel 6a</td>
             <td>Primary (12.2 mp) and Ultrawide (12mp)</td>
-            <td><img src="Pixel6a.webp" height="70px"></td>
+            <td><img src="Images/Pixel6a.webp" height="70px"></td>
         </tr>
         <tr>
             <td>Nintendo</td>
             <td>3DS</td>
             <td>Front (0.3 mp)</td>
-            <td><img src="3DS.webp" height="70px"></td>
+            <td><img src="Images/3DS.webp" height="70px"></td>
         </tr>
     </table>
     <div id="back-to-index">
