--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -40,7 +40,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
     <meta property="og:description" content="Hello this is my website for my projects" />
-    <meta property="og:image" content="Favicon.png" />
+    <meta property="og:image" content="Images/Favicon.png" />
     <meta name="theme-color" content="#010101">
 </head>
 
