--- a/showcase.html
+++ b/showcase.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Showcase</title>
-    <link rel="icon" type="image/png" href="Favicon.png">
+    <link rel="icon" type="image/png" href="Images/Favicon.png">
     <style>
         body{
             background-color:#010101;
@@ -43,58 +43,58 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
     <meta property="og:description" content="Hello this is my website for my projects" />
-    <meta property="og:image" content="Favicon.png" />
+    <meta property="og:image" content="Images/Favicon.png" />
     <meta name="theme-color" content="#010101">
 </head>
 <body>
     <div id="image-grid">
         <div class="image">
-            <img draggable="false" src="IMGP3019.webp" alt="Image 1" width="100%">
+            <img draggable="false" src="Images/IMGP3019.webp" alt="Image 1" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMGP3022.webp" alt="Image 2" width="100%">
+            <img draggable="false" src="Images/IMGP3022.webp" alt="Image 2" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMGP3028.webp" alt="Image 3" width="100%">
+            <img draggable="false" src="Images/IMGP3028.webp" alt="Image 3" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4529.webp" alt="Image 4" width="100%">
+            <img draggable="false" src="Images/IMG_4529.webp" alt="Image 4" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4530.webp" alt="Image 5" width="100%">
+            <img draggable="false" src="Images/IMG_4530.webp" alt="Image 5" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4533.webp" alt="Image 6" width="100%">
+            <img draggable="false" src="Images/IMG_4533.webp" alt="Image 6" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4563.webp" alt="Image 7" width="100%">
+            <img draggable="false" src="Images/IMG_4563.webp" alt="Image 7" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4553.webp" alt="Image 8" width="100%">
+            <img draggable="false" src="Images/IMG_4553.webp" alt="Image 8" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4554.webp" alt="Image 9" width="100%">
+            <img draggable="false" src="Images/IMG_4554.webp" alt="Image 9" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4539.webp" alt="Image 10" width="100%">
+            <img draggable="false" src="Images/IMG_4539.webp" alt="Image 10" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4551.webp" alt="Image 11" width="100%">
+            <img draggable="false" src="Images/IMG_4551.webp" alt="Image 11" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4555.webp" alt="Image 12" width="100%">
+            <img draggable="false" src="Images/IMG_4555.webp" alt="Image 12" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4560.webp" alt="Image 13" width="100%">
+            <img draggable="false" src="Images/IMG_4560.webp" alt="Image 13" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="PXL_20240408_224341106.RAW-02.ORIGINAL.webp" alt="Image 14" width="100%">
+            <img draggable="false" src="Images/PXL_20240408_224341106.RAW-02.ORIGINAL.webp" alt="Image 14" width="100%">
         </div>
         <div class="image">
-            <img draggable="false" src="IMG_4561.webp" alt="Image 15" width="100%">
+            <img draggable="false" src="Images/IMG_4561.webp" alt="Image 15" width="100%">
         </div>
                 <div class="image">
-            <img draggable="false" src="IMG_4586.webp" alt="Image 16" width="100%">
+            <img draggable="false" src="Images/IMG_4586.webp" alt="Image 16" width="100%">
         </div>
         <br>
         <br>
