working on about me

--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -13,11 +13,10 @@
             color: white;
             margin: 0;
             padding: 0;
-            /* Remove border from body */
         }
 
         header {
-            border: 10px solid #E0B0FF; /* Updated border color */
+            border: 10px solid #E0B0FF;
             box-sizing: border-box; 
         }
 
