--- a/aboutme.html
+++ b/aboutme.html
@@ -46,4 +46,7 @@
         <h2>Who I am</h2>
         <p>I am 16 years old and currently in highschool. I have a passion for programing, photography, and music. I enjoy hanging out with friends and family, traveling, cooking and baking, building gundam model kits, listening to music, collecting cds and vinyl, and many more things.</p>
     </div>
+    <div id="back-to-index">
+        <a href="JadeKuehnel.html"><button>Home</button></a>
+    </div>
 </body>
