--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +8,34 @@
     <link rel="icon" type="image/png" href="Images/Favicon.png">
     
     <style>
-        body{
-            background-color:#010101;
+        body {
+            background-color: #010101;
+            color: white;
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        h1, h2 {
+            color: white;
+            margin-top: 0;
+        }
+
+        p {
             color: white;
         }
 
@@ -27,6 +54,7 @@
             background-color: #902bf5;
         }
     </style>
+
     <meta property="og:title" content="Jade Kuehnel" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
@@ -36,7 +64,7 @@
 </head>
 <body>
     <header> 
-        <h1> About Me</h1 color:white>
+        <h1> About Me</h1>
     </header>
 
     <div class="container">
@@ -44,9 +72,10 @@
         <p>Hello, my name is Jade Kuehnel. Welcome to my site!</p>
 
         <h2>Who I am</h2>
-        <p>I am 16 years old and currently in highschool. I have a passion for programing, photography, and music. I enjoy hanging out with friends and family, traveling, cooking and baking, building gundam model kits, listening to music, collecting cds and vinyl, and many more things.</p>
+        <p>I am 16 years old and currently in high school. I have a passion for programming, photography, and music. I enjoy hanging out with friends and family, traveling, cooking and baking, building Gundam model kits, listening to music, collecting CDs and vinyl, and many more things.</p>
     </div>
     <div id="back-to-index">
         <a href="JadeKuehnel.html"><button>Home</button></a>
     </div>
 </body>
+</html>
