--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #E0B0FF;
             color: white;
             text-align: center;
             padding: 20px;
