--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,8 @@
             color: white;
             text-align: center;
             padding: 20px;
+            border: 10px solid #E0B0FF;
+            box-sizing: border-box; 
         }
 
         .container {
