--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -51,6 +51,7 @@
             <a href="Software.html">Software I use</a>
             <a href="computer.html">Computer Specs</a>
             <a href="showcase.html">Photography Showcase</a>
+            <a href="aboutme.html">About Me</a>
             <br>
             <br>
 
