--- a/aboutme.html
+++ b/aboutme.html
@@ -75,6 +75,11 @@
 
         <h2>Who I am</h2>
         <p>I am 16 years old and currently in high school. I have a passion for programming, photography, and music. I enjoy hanging out with friends and family, traveling, cooking and baking, building Gundam model kits, listening to music, collecting CDs and vinyl, and many more things.</p>
+
+        <h2>Socials</h2>
+        <a href="https://www.instagram.com/jadedoesphotography08/" target="_blank">
+            <img src="Images/Insta.webp" alt="Instagram" width="50" height="50">
+        </a>
     </div>
     <div id="back-to-index">
         <a href="JadeKuehnel.html"><button>Home</button></a>
