--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -59,7 +59,7 @@
     </header>
     <main>
         <h2>Welcome</h2>
-        <p>Hello, welcome to my site, it is still a work in progress.</p>
+        <p>Hello, welcome to my site, this is where I showcase my photography and other things in the future like projects I am working on or a blog of some sort. This website is still a work in progress but feel free to look at my pictures and my socials. </p>
     </main>
 
 </body>
