--- a/aboutme.html
+++ b/aboutme.html
@@ -80,6 +80,14 @@
         <a href="https://www.instagram.com/jadedoesphotography08/" target="_blank">
             <img src="Images/Insta.webp" alt="Instagram" width="50" height="50">
         </a>
+
+        <a href="https://twitter.com/JKFUNK0" target="_blank">
+            <img src="Images/X.webp" alt="X" width="50" height="50">
+        </a>
+
+        <a href="https://www.tumblr.com/blog/jadek08" target="_blank">
+            <img src="Images/Tumblr.webp" alt="Tumblr" width="50" height="50">
+        </a>
     </div>
     <div id="back-to-index">
         <a href="JadeKuehnel.html"><button>Home</button></a>
