--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Computer Specs</title>
+    <title>About Me</title>
     <link rel="icon" type="image/png" href="Images/Favicon.png">
     
     <style>
