Added Flickr to about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -88,6 +88,11 @@
         <a href="https://www.tumblr.com/blog/jadek08" target="_blank">
             <img src="Images/Tumblr.webp" alt="Tumblr" width="50" height="50">
         </a>
+
+        
+        <a href="https://www.flickr.com/photos/jadekuehnel08/" target="_blank">
+            <img src="Images/Flickr.webp" alt="Flickr" width="50" height="50">
+        </a>
     </div>
     <div id="back-to-index">
         <a href="JadeKuehnel.html"><button>Home</button></a>
